# grad_sample

./: .gitignore  energy_ref_litt.json  pyproject.toml
conf/: base.yaml  cholesky_base.yaml  cholesky_vit.yaml  cholesky_vit1d.yaml  cholesky_vit_large_nosym.yaml  cnn_heisenberg.yaml  j1j2_10.yaml  j1j2_10ckpt.yaml  j1j2_10ckpt_fine.yaml  j1j2_6.yaml  j1j2_fs.yaml  j1j2_inference.yaml  jeanzay_vit.yaml  logstate_fs.yaml  qchem.yaml  qchem_fs.yaml  snr_analysis.yaml  snr_logstate.yaml  test_is.yaml  train_is.yaml  train_is_xxz2d.yaml  vit_j1j2.yaml  vit_large.yaml  vit_large_nosym.yaml  vit_xxz.yaml
conf/ansatz/: cnn.yaml  nnbf.yaml  rbm.yaml  rnn.yaml  vit.yaml  vit1d.yaml  vit_xl.yaml
conf/is_distrib/: overdispersed.yaml
conf/is_distribs/: overdispersed.yaml
conf/model/: heisenberg.yaml  heisenberg1d.yaml  heisenberg2d.yaml  ising.yaml  j1j2.yaml  lithium_oxide.yaml  nitrogen.yaml  shastry.yaml  xxz.yaml  xxz2d.yaml
conf/opt/: sgd.yaml
conf/solver_fn/: pinv_smooth.yaml
conf/task/: analysis_dp.yaml  analysis_is.yaml  analysis_kl.yaml  analysis_state.yaml  inference.yaml
notebooks/: .mpack  Untitled.ipynb  bias_variance.ipynb  delta_dep.ipynb  fast_sampling.ipynb  gs_amplitudes.ipynb  is_adapt.ipynb  is_analysis.ipynb  is_test_.ipynb  j1j2_inference.ipynb  mc_variance.ipynb  multi_alpha_plot.ipynb  ntk_analysis.ipynb  out.mpack  plots.ipynb  post_training_inference.ipynb  retrieve_data.ipynb  snr_analysis.ipynb  snr_fs_4x4.ipynb  snr_fs_is.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  is_analysis-checkpoint.ipynb
(+495 files in other folders)
