[project]
name = "netket-env"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "grad-sample",
    "netket_pro",
    "hydra-core>=1.3.2",
    "jax[cuda12]<0.6",
    "netket>=3.18",
    "seaborn>=0.13.2",
    "orbax_checkpoint>=0.11.13",
    "jupyter>=1.1.1",
]

[tool.uv.sources]
grad-sample = { path = "../../grad_sample", editable = true }
netket_pro = { path = "../../netket_pro", editable = true }
